add more endpoints
- get/post specific item
- get/post user
- post reservation to item
