# restapi/operations/post_item_name_reservation_responses.go
@@ -1,0 +1,85 @@
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/tompscanlan/labreserved/models"
+)
+
+/*PostItemNameReservationOK Accepted
+
+swagger:response postItemNameReservationOK
+*/
+type PostItemNameReservationOK struct {
+
+	// In: body
+	Payload *models.Reservation `json:"body,omitempty"`
+}
+
+// NewPostItemNameReservationOK creates PostItemNameReservationOK with default headers values
+func NewPostItemNameReservationOK() *PostItemNameReservationOK {
+	return &PostItemNameReservationOK{}
+}
+
+// WithPayload adds the payload to the post item name reservation o k response
+func (o *PostItemNameReservationOK) WithPayload(payload *models.Reservation) *PostItemNameReservationOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post item name reservation o k response
+func (o *PostItemNameReservationOK) SetPayload(payload *models.Reservation) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostItemNameReservationOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*PostItemNameReservationBadRequest Error
+
+swagger:response postItemNameReservationBadRequest
+*/
+type PostItemNameReservationBadRequest struct {
+
+	// In: body
+	Payload string `json:"body,omitempty"`
+}
+
+// NewPostItemNameReservationBadRequest creates PostItemNameReservationBadRequest with default headers values
+func NewPostItemNameReservationBadRequest() *PostItemNameReservationBadRequest {
+	return &PostItemNameReservationBadRequest{}
+}
+
+// WithPayload adds the payload to the post item name reservation bad request response
+func (o *PostItemNameReservationBadRequest) WithPayload(payload string) *PostItemNameReservationBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post item name reservation bad request response
+func (o *PostItemNameReservationBadRequest) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostItemNameReservationBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
